# GoldTraderPro

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: default.yaml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/backtest/: page.tsx
dashboard/src/app/charts/: page.tsx
dashboard/src/app/paper-trading/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/signals/: page.tsx
dashboard/src/components/: CandlestickChart.tsx  Card.tsx  EquityCurveChart.tsx  Sidebar.tsx
dashboard/src/lib/: api.ts
docs/prd/: PRD-001-GoldTrader.md
scripts/: run_backtest.py  run_paper_trading.py
tests/unit/: test_alerts.py  test_backtest.py  test_candle.py  test_ccxt_provider.py  test_config_endpoint.py  test_data_feed.py  test_indicators.py  test_multi_tf.py  test_order.py  test_patterns.py  test_signal.py  test_volume.py
