[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "goldtrader-pro"
version = "0.1.0"
description = "Sistema Algorítmico de Trading para o Mercado de Ouro (XAU/USD)"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Junior Miranda", email = "alwaysgreen.developer@gmail.com" }]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ccxt>=4.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "ta-lib>=0.4.28",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
